--- a/index.css
+++ b/index.css
@@ -1,107 +1,265 @@
-body {
-  font-family: 'Source Sans Pro', sans-serif;
-  margin: 0;
-  background: #f4f4f4;
+/* Fonts */
+
+/* Family */
+h1 { 
+  font-family: 'Julius Sans One', sans-serif;
 }
+
+h2 { /* Contact, Skills, Education, About me, Work Experience */
+  font-family: 'Archivo Narrow', sans-serif;
+}
+
+h3 { /* Accountant */
+  font-family: 'Open Sans', sans-serif;
+}
+
+.jobPosition span, 
+.projectName span {
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+.upperCase {
+  text-transform: uppercase; 
+}
+
+.smallText, 
+.smallText span, 
+.smallText p, 
+.smallText a {
+  font-family: 'Source Sans Pro', sans-serif;
+  text-align: justify;
+}
+
+/* End Family */
+
+/* Colors */
+h1 { 
+  color: #111; 
+}
+
+.leftPanel, 
+.leftPanel a {
+  color: #bebebe;
+  text-decoration: none;
+}
+
+.leftPanel h2 {
+  color: white;
+}
+
+/* End Colors */
+
+/* Sizes */
+h1 { 
+  font-weight: 300; 
+  font-size: 1.2cm;
+  transform:scale(1,1.15); 
+  margin-bottom: 0.2cm;
+  margin-top: 0.2cm;
+  text-transform: uppercase; 
+}
+
+h2 {
+  margin-top: 0.1cm;
+  margin-bottom: 0.1cm;
+}
+
+.leftPanel, 
+.leftPanel a {
+  font-size: 0.38cm;
+}
+
+.projectName span, 
+.jobPosition span {
+  font-size: 0.35cm;
+}
+
+.smallText, 
+.smallText span, 
+.smallText p, 
+.smallText a {
+  font-size: 0.35cm;
+}
+
+.leftPanel .smallText, 
+.leftPanel .smallText, 
+.leftPanel .smallText span, 
+.leftPanel .smallText p, 
+.smallText a {
+  font-size: 0.45cm;
+}
+
+.contactIcon {
+  width: 0.5cm;
+  text-align: center;
+}
+
+p {
+  margin-top: 0.05cm;
+  margin-bottom: 0.05cm;
+}
+/* End Sizes */
+
+.bolded {
+  font-weight: bold;
+}
+
+.white {
+  color: white;
+}
+/* End Fonts */
+
+/* Layout */
+body {
+  background: rgb(204,204,204); 
+  width: 21cm;
+  height: 29.7cm;
+  margin: 0 auto;
+}
+
+/* Printing */
+page {
+  background: white;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 0.5cm;
+}
+
+page[size="A4"] {  
+  width: 21cm;
+  height: 29.7cm; 
+}
+
+@page {
+   size: 21cm 29.7cm;
+   padding: 0;
+   margin: 0mm;
+   border: none;
+   border-collapse: collapse;
+}
+/* End Printing */
 
 .container {
   display: flex;
   flex-direction: row;
-  max-width: 1200px;
-  margin: auto;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.1);
-}
-
-.leftPanel, .rightPanel {
-  padding: 20px;
+  width: 100%;
+  height: 100%;
 }
 
 .leftPanel {
-  background-color: #333;
-  color: #fff;
-  flex: 1;
+  width: 27%;
+  background-color: #484444;
+  padding: 0.7cm;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .rightPanel {
-  flex: 2;
-  color: #111;
+  width: 73%;
+  padding: 0.7cm;
 }
 
 .leftPanel img {
-  width: 150px;
-  height: 150px;
+  width: 4cm;
+  height: 4cm;
+  margin-bottom: 0.7cm;
   border-radius: 50%;
-  border: 3px solid #fff;
-  margin-bottom: 20px;
+  border: 0.15cm solid white;
+  object-fit: cover;
+  object-position: 50% 50%;
+}
+
+.leftPanel .details {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+.skill {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.bottomLineSeparator {
+  border-bottom: 0.05cm solid white;
+}
+
+.yearsOfExperience {
+  width: 1.6cm;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.alignleft {
+  text-align: left !important;
+  width: 1cm;
+}
+
+.alignright {
+  text-align: right !important;
+  width: 0.6cm;
+  margin-right: 0.1cm
+}
+
+.workExperience>ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.workExperience>ul>li {
+  position: relative;
+  margin: 0;
+  padding-bottom: 0.5cm;
+  padding-left: 0.5cm;
+}
+
+.workExperience>ul>li:before {
+  background-color: #b8abab;
+  width: 0.05cm;
+  content: '';
+  position: absolute;
+  top: 0.1cm;
+  bottom: -0.2cm; /* change this after border removal */
+  left: 0.05cm;
+}
+
+.workExperience>ul>li::after {
+  content: '';
+  position: absolute;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' aria-hidden='true' viewBox='0 0 32 32' focusable='false'%3E%3Ccircle stroke='none' fill='%23484444' cx='16' cy='16' r='10'%3E%3C/circle%3E%3C/svg%3E");
+  background-repeat: no-repeat;
+  background-size: contain;
+  left: -0.09cm;
+  top: 0;
+  width: 0.35cm;
+  height: 0.35cm;
+}
+
+.jobPosition {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .item {
-  margin-bottom: 30px;
+  padding-bottom: 0.7cm;
+  padding-top: 0.7cm;
 }
 
-.skillsList {
-  list-style: none;
-  padding: 0;
+.item h2{
+  margin-top: 0;
 }
 
-.skillsList li {
-  background: #444;
-  padding: 5px 10px;
-  margin: 5px 0;
-  border-radius: 5px;
+.lastParagrafNoMarginBottom {
+  margin-bottom: 0;
 }
 
-h1 {
-  font-family: 'Julius Sans One', sans-serif;
-  font-size: 2em;
-  margin-bottom: 0.2em;
+.workExperience>ul>li ul {
+  padding-left: 0.5cm;
+  list-style-type: disc;
 }
+/*End Layout*/
 
-h2 {
-  font-family: 'Archivo Narrow', sans-serif;
-  border-bottom: 2px solid #ddd;
-  padding-bottom: 5px;
-  margin-top: 1.2em;
-}
-
-h3 {
-  font-family: 'Open Sans', sans-serif;
-  margin-bottom: 0.3em;
-}
-
-.contactIcon {
-  margin-right: 10px;
-}
-
-a {
-  color: #ffcc00;
-  text-decoration: none;
-}
-
-a:hover {
-  text-decoration: underline;
-}
-
-.badge {
-  max-width: 200px;
-  margin-top: 10px;
-}
-
-@media (max-width: 768px) {
-  .container {
-    flex-direction: column;
-  }
-
-  .leftPanel, .rightPanel {
-    width: 100%;
-  }
-
-  .leftPanel img {
-    width: 120px;
-    height: 120px;
-  }
-}
